--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "immer": "^10.1.1",
     "lucide-react": "^0.511.0",
     "motion": "^12.16.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.3.0",
     "zustand": "^5.0.5"
   },
