--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 
-NEXT_PUBLIC_SITE_URL=http://localhost:3000/
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
 MY_RESUME=https://drive.google.com/file/d/1VPC0OiigxGSmhBpTVghYIsQ_wGAQotSO/view?usp=drive_link
 
 MY_MOBILE=01853988282
@@ -12,11 +12,4 @@ MY_LINKEDIN=https://www.linkedin.com/in/coderrony
 MY_GITHUB=https://github.com/coderrony
 
 
-
-MY_SEO_DESCRIPTION=" Hi, i'm  a
-              passionate Web Developer since 2019. I specialize in
-                React, Next.js, JavaScript, Python, Django
-              and more. My priority is to get your business online the right
-              way, with industry-standard design and all the functionality you
-              need. Let's connect and bring your project to life! See my
-              resume below."
+MY_SEO_DESCRIPTION="Rony Das is a full-stack web developer specializing in TypeScript, React, Nextjs, Node, MongoDB, Python, Redis, Docker, Web Socket and real-time scalable web applications. Explore his projects, technical skills, and development journey. Available for freelance and full-time opportunities."
