--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
 
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
-MY_RESUME=https://drive.google.com/file/d/1VPC0OiigxGSmhBpTVghYIsQ_wGAQotSO/view?usp=drive_link
+MY_RESUME=https://drive.google.com/file/d/18Bm0k8UTJgVj0RiTxy0mc7q7AgMM2aq5/view?usp=sharing
 
 MY_MOBILE=01853988282
 MY_EMAIL=ronydas7090@gmail.com
